Fixed: Align correctly Show user from rooms span

--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -51,7 +51,7 @@
 	color			: #FFA200;
 
 	position		: relative;
-	left			: 33px;
+/*	left			: 33px; */
 
 	border-bottom		: 1px solid #FFA200;
 
